maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:14: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (x < getMondeLargeur() - 1 && getIndication(x+1,y) == b - 1) {
  ^JediEscaper:22: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (x > 0 && getIndication(x-1,y) == b - 1) {
  ^JediEscaper:30: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (y > 0 && getIndication(x,y-1) == b - 1) {
  ^JediEscaper:38: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (y < getMondeHauteur() - 1 && getIndication(x,y+1) == b - 1) {
  ^